# learn_rocket

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
simple_rocket/: .env.example  Cargo.toml  Rocket.toml  docker-compose.yml  makefile
simple_rocket/migrations/: 20230403191239_create_users.sql
simple_rocket/src/: main.rs
src/: lib.rs  main.rs  routes.rs
src/controllers/: health.rs
src/controllers/v1/: users.rs
