[package]
name = "learn_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
rocket = "0.5.0-rc.2"
rocket_contrib = { version = "0.4.11", features = ["helmet"] }
serde = "1.0.149"
serde_json = "1.0.89"
diesel = { version = "2.0.2", features = ["postgres"] }
dotenvy = "0.15"
