[package]
name = "hello_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.5.0-rc.3"
rocket_db_pools = {version = "0.1.0-rc.2", features = ["sqlx_postgres"]}
sqlx = { version = "0.6.3", features = [ "postgres", "uuid", "runtime-tokio-rustls" ] }
uuid = { version = "1.3.0", features = ["v4"] }
serde = "1.0.159"
